--- a/sense6bat/src/main/res/values/strings.xml
+++ b/sense6bat/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
     <string name="app_name">Sense 6 Battery Percent</string>
-    <string name="doitbutton">Unpack and Hide</string>
+    <string name="doitbutton">Unpack and Hide Launcher</string>
 
 </resources>
